# TransScriptRT

./: .gitignore  CMakeLists.txt  readMe.md
include/: audio_segment_tsrt.h  audio_tsrt.h  constants_config_tsrt.h  exceptions_tsrt.h  logger_tsrt.h  ring_buffer_tsrt.h  script_engine_tsrt.h  speaker_id_tsrt.h  status_codes_tsrt.h
src/: audio_tsrt.cpp  logger_tsrt.cpp  main.cpp  script_engine_tsrt.cpp
